sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:9: error: '=>' expected but '}' found.
        case BLANC       }
                         ^